Matrix.cppresult.txt
In file included from cur.cpp:16:0:
ulshin/Matrix.cpp: In member function 'virtual Matrix Matrix::reverse()':
ulshin/Matrix.cpp:232:12: error: no match for 'operator=' (operand types are 'Matrix' and 'Matrix')
   _inverse = _inverse*pow(det, -1);
            ^
ulshin/Matrix.cpp:232:12: note: candidate is:
ulshin/Matrix.cpp:39:18: note: virtual Matrix& Matrix::operator=(Matrix&)
  virtual Matrix& operator = (Matrix& a)
                  ^
ulshin/Matrix.cpp:39:18: note:   no known conversion for argument 1 from 'Matrix' to 'Matrix&'
cur.cpp: In member function 'virtual void MatrixTest_Reverse_Test::TestBody()':
cur.cpp:47:7: error: no match for 'operator=' (operand types are 'Matrix' and 'Matrix')
     c = m->reverse();
       ^
cur.cpp:47:7: note: candidate is:
In file included from cur.cpp:16:0:
ulshin/Matrix.cpp:39:18: note: virtual Matrix& Matrix::operator=(Matrix&)
  virtual Matrix& operator = (Matrix& a)
                  ^
ulshin/Matrix.cpp:39:18: note:   no known conversion for argument 1 from 'Matrix' to 'Matrix&'
./check.sh: line 24: ./a.out: No such file or directory
